# qt_test

./: CMakeLists.txt  item.cpp  item.h  main.cpp  thread.cpp  thread.h
